--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -25,11 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <title>CDP</title>
+    <title>CSDT</title>
   </head>
-  <body style="margin: 0px;">
+  <body style="margin: 0px; height: 100%; background-color:#202930;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="position: absolute; top: 0px; bottom: 0px; left: 0px; right: 0px;"></div>
+    <div id="root" style="height: 100%; min-height: 100%;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
