--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="height: 100%;">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -29,7 +29,7 @@
   </head>
   <body style="margin: 0px; height: 100%; background-color:#202930;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="height: 100%; min-height: 100%;"></div>
+    <div id="root" style="height: auto !important; display: flex; min-height: 100%;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
