--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   </head>
   <body style="margin: 0px; height: 100%; background-color:#202930;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="height: auto !important; display: flex; min-height: 100%;"></div>
+    <div id="root" style="height: auto !important; display: flex; min-height: 100%; flex-direction: row;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
